--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "apollo-boost": "^0.1.21",
     "graphql": "^14.0.2",
     "vue": "^2.5.17",
-    "vue-apollo": "^3.0.0-beta.26"
+    "vue-apollo": "^3.0.0-beta.26",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
