--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
     - "4000:4000"
     entrypoint: ["sh", "-c"]
-    command: ["yarn install && node index.js"]
+    command: ["yarn install && yarn run start"]
   graphql-client:
     build:
       context: .
@@ -18,6 +18,5 @@ services:
     - ./client:/usr/src/app
     ports:
     - "8080:8080"
-    - "8000:8000"
     entrypoint: ["sh", "-c"]
     command: ["yarn install && yarn serve"]
